# evidential-occupancy

./: .gitignore  README.md  pixi.toml  pyproject.toml
conf/: bba.yaml  bba04.yaml  default.yaml  occ3d.yaml  open_occupancy.yaml  scene_as_occupancy.yaml  surround_occ.yaml
scene_reconstruction/cli/: config.py  eval.py  export.py  main.py
scene_reconstruction/core/: __init__.py  config.py  icp.py  transform.py  volume.py
scene_reconstruction/data/nuscenes/: dataset.py  io.py  parse.py  polars_helpers.py  scene_flow.py  scene_utils.py  typing.py
scene_reconstruction/eval/: lidar_depth.py
scene_reconstruction/math/: dempster_shafer.py  spherical_coordinate_system.py
scene_reconstruction/occupancy/: grid.py  render_camera.py  temporal_accumulation.py  temporal_transmission_and_reflection.py  transmission_reflection.py
scene_reconstruction/visualization/: colormap.py
scene_reconstruction/visualization/export/: image.py
scene_reconstruction/visualization/open3d/: pointcloud.py  volume.py
scene_reconstruction/visualization/plotly/: volume.py
scene_reconstruction/visualization/streamlit/: occupancy_gt.py
scene_reconstruction/visualization/utils/: mesh.py
