[project]
name = "scene-reconstruction"
description = 'Implementation of "Accurate Training Data for Occupancy Map Prediction in Automated Driving Using Evidence Theory" (CVPR 2024)'
version = "0.1.0"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.9"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scene_reconstruction"]